<resources>
    <string name="app_name">FirstQuizz</string>
    <string name="nu_ti_irosi_viata_lucrand_pentru_bani_pune_banii_sa_lucreze_pentru_tine">Nu-ti irosi viata lucrand pentru bani, pune banii sa lucreze pentru tine</string>
    <string name="incepator">Incepator</string>
    <string name="experimentat">Experimentat</string>
    <string name="banii_nu_sunt_singurul_raspuns_dar_fac_diferenta">„Banii nu sunt singurul raspuns, dar fac diferenta”</string>
    <string name="barak_obama">Barak Obama</string>
    <string name="jocul_banilor">Jocul banilor</string>
    <string name="incepe">Incepe</string>
    <string name="trimite">Trimite</string>
    <string name="_0_10">0/10</string>
    <string name="finalizeaza">Finalizeaza</string>
    <string name="urmatoarea_intrebare">Urmatoarea intrebare</string>
    <string name="rezultat">Rezultat</string>
    <string name="felicitari">Felicitari!</string>
    <string name="scorul_tau_este_9_din_10">Scorul tau este 9 din 10</string>
    <string name="inchide">Inchide</string>
    <string name="meniu_principal">Meniu principal</string>
    <string name="revino_in_meniul_principal">Revino in meniul principal</string>
    <string name="afla_cat_de_priceput_esti">Afla cat de priceput esti!</string>
    <string name="text1">Daca ai nevoie de mai mulți lei pentru a cumpara un euro, atunci euro:</string>
    <string name="raspuns11">S-a apreciat</string>
    <string name="raspuns12">A ramas la fel</string>
    <string name="raspuns13">S-a depreciat</string>
    <string name="text2">Puterea de cumparare scade si costa mai mult sa cumperi bunuri atunci cand este:</string>
    <string name="raspuns21">Piata bear</string>
    <string name="raspuns22">Inflatie</string>
    <string name="raspuns23">Deflatie</string>
    <string name="text3">Sa presupunem ca mostenesti 10.000 de lei astazi si prietenul tau mosteneste 10.000 de lei peste 3 ani. Cine este mai bogat datorita acestei mosteniri?</string>
    <string name="raspuns31">Tu</string>
    <string name="raspuns32">Prietenul tau</string>
    <string name="raspuns33">Nu este nicio diferenta</string>
    <string name="text4">Rata dobanzii contului tau de economii a fost 4% pe an si inflația a fost 5% pe an. Vei putea cumpara mai mult, exact la fel, sau mai putin decat astazi cu acei bani?</string>
    <string name="raspuns41">Mai mult</string>
    <string name="raspuns42">Exact la fel</string>
    <string name="raspuns43">Mai putin</string>
    <string name="text5">Valoarea carora dintre urmatoarele bunuri se va deprecia in timp daca le detii?</string>
    <string name="raspuns51">O casa</string>
    <string name="raspuns52">O mașina</string>
    <string name="raspuns53">Ambele</string>
    <string name="enunta1">De obicei, investițiile care sunt mai riscante tind sa ofere randamente mai ridicate in timp decat investițiile mai puțin riscante.</string>
    <string name="raspunsa11">Fals</string>
    <string name="raspunsa12">Adevarat</string>
    <string name="raspunsa13">Nu știu</string>
    <string name="enunta2">Un student are un depozit la banca de 3.000 lei. El beneficiaza de o dobanda de 1% pe an si primeste la fiecare 3 luni 7,5 lei in contul curent. Care este principalul?</string>
    <string name="raspunsa21">1%</string>
    <string name="raspunsa22">7,5 lei</string>
    <string name="raspunsa23">3.000 lei</string>
    <string name="enunta4">Cardul de credit iti ofera posibilitatea sa imprumuți fonduri de la banca, chiar in momentul achitarii bunurilor, fara dobanda, pentru o perioada de gratie nelimitata.</string>
    <string name="raspunsa41">Adevarat</string>
    <string name="raspunsa42">Fals</string>
    <string name="raspunsa43">Nu stiu</string>
    <string name="enunta5">Ce tipuri de instrumente financiare se pot deconta prin Depozitarul Central?</string>
    <string name="raspunsa51">Actiuni si obligatiuni</string>
    <string name="raspunsa52">Titluri de stat si unitati de fond</string>
    <string name="raspunsa53">Toate variantele de mai sus</string>
    <string name="enunta0">De obicei, care dintre urmatoarele active inregistreaza cea mai mare fluctuație in timp, dar in acelasi timp, de obicei aduce si cel mai mare randament pe termen lung?</string>
    <string name="raspunsa01">Actiuni</string>
    <string name="raspunsa02">Obligatiuni</string>
    <string name="raspunsa03">Depozite</string>
    <string name="scor">Scorul tau este </string>
    <string name="din_5"> din 5</string>
</resources>